Update to new track file format.

--- a/analysis/sampling_rate_for_face_detection.ipynb
+++ b/analysis/sampling_rate_for_face_detection.ipynb
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7f470050",
+   "id": "d1f7d2f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,27 +46,63 @@
      "output_type": "stream",
      "text": [
       "Total video length: 1:10:54.566667\n",
-      "Total time detecting: 0:43:36.191178\n"
+      "Total time detecting: 0:43:36.191178\n",
+      "Total track length: 0:24:28.566534\n"
      ]
     }
    ],
    "source": [
-    "data = {}\n",
-    "\n",
-    "for e in experiments:\n",
-    "    d = dict(video_length=[], time_detecting=[], width=[], height=[])\n",
-    "    for track_file in Path(e['folder']).glob('**/*.tracks.json'):\n",
+    "for d in experiments:\n",
+    "    d['video_length'] = []\n",
+    "    d['time_detecting'] = []\n",
+    "    d['width'] = []\n",
+    "    d['height'] = []\n",
+    "    d['track_time'] = []\n",
+    "    d['track_bbox'] = []\n",
+    "    d['track_kpts'] = []\n",
+    "    d['track_length'] = []\n",
+    "    \n",
+    "    for track_file in Path(d['folder']).glob('**/*.tracks.json'):\n",
     "        with track_file.open('r', encoding='utf8') as fp:\n",
     "            track_file = json.load(fp)\n",
+    "        \n",
+    "        track_time, track_bbox, track_kpts = zip(*[(t['time'], t['bbox'], t['kpts']) for t in track_file['tracks'].values()])\n",
+    "        \n",
+    "        track_time = list(track_time)\n",
+    "        track_bbox = list(track_bbox)\n",
+    "        track_kpts = list(track_kpts)\n",
+    "        track_length = []\n",
+    "        \n",
+    "        # Normalizes tracks to Video Width/Height and to the start time.\n",
+    "        for i, (t, b, k) in enumerate(zip(track_time, track_bbox, track_kpts)):\n",
+    "            t = np.float32(t)\n",
+    "            b = np.float32(b).reshape(-1, 2, 2)\n",
+    "            k = np.float32(k).reshape(-1, 5, 2)\n",
+    "            t -= t[0]\n",
+    "            b[:, :, 0] /= track_file['width']\n",
+    "            b[:, :, 1] /= track_file['height']\n",
+    "            k[:, :, 0] /= track_file['width']\n",
+    "            k[:, :, 1] /= track_file['height']\n",
+    "            track_time[i] = t.tolist()\n",
+    "            track_bbox[i] = b.tolist()\n",
+    "            track_kpts[i] = k.tolist()\n",
+    "            track_length.append(t[-1])\n",
+    "        \n",
+    "        # Video data\n",
     "        d['video_length'].append(track_file['video_duration'])\n",
     "        d['time_detecting'].append(track_file['detection_duration'])\n",
     "        d['width'].append(track_file['width'])\n",
     "        d['height'].append(track_file['height'])\n",
-    "    data[e['label']] = d\n",
+    "        \n",
+    "        # Track data\n",
+    "        d['track_time'].extend(track_time)\n",
+    "        d['track_bbox'].extend(track_bbox)\n",
+    "        d['track_kpts'].extend(track_kpts)\n",
+    "        d['track_length'].extend(track_length)\n",
     "\n",
-    "\n",
-    "print('Total video length:', timedelta(seconds=sum(data[experiments[0]['label']]['video_length'])))\n",
-    "print('Total time detecting:', timedelta(seconds=sum(data[experiments[0]['label']]['time_detecting'])))"
+    "print('Total video length:', timedelta(seconds=sum(experiments[0]['video_length'])))\n",
+    "print('Total time detecting:', timedelta(seconds=sum(experiments[0]['time_detecting'])))\n",
+    "print('Total track length:', timedelta(seconds=sum(experiments[0]['track_length'])))"
    ]
   },
   {
@@ -108,7 +144,7 @@
     "fig = plt.figure()\n",
     "ax = plt.axes()\n",
     "\n",
-    "for label, d in data.items():\n",
+    "for d in experiments:\n",
     "    area = np.float32(d['width']) * np.float32(d['height'])\n",
     "    speedup = np.float32(d['video_length']) / np.float32(d['time_detecting'])\n",
     "    \n",
@@ -117,7 +153,7 @@
     "    area = area[idx]\n",
     "    speedup = speedup[idx]\n",
     "    \n",
-    "    ax.plot(area, speedup, label=label)\n",
+    "    ax.plot(area, speedup, label=d['label'])\n",
     "\n",
     "fig.tight_layout()\n",
     "plt.xlabel('Area')\n",
