Extract random samples

--- a/analysis/sampling_rate_for_face_detection.ipynb
+++ b/analysis/sampling_rate_for_face_detection.ipynb
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d1f7d2f0",
+   "id": "921dcd74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,10 +25,18 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "np.random.seed(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "79f2952f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "SAMPLE_LENGTH = 5.0\n",
     "SAMPLE_NUM = 1000\n",
-    "\n",
-    "np.random.seed(0)\n",
     "\n",
     "experiments = [\n",
     "    {'folder': r'D:/downloads/tracks@30FPS', 'label': '30FPS'},\n",
@@ -37,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "7b19df45",
    "metadata": {},
    "outputs": [
@@ -45,9 +53,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total video length: 1:10:54.566667\n",
-      "Total time detecting: 0:43:36.191178\n",
-      "Total track length: 0:24:28.566534\n"
+      "30FPS:\n",
+      "  - Total video length: 1:10:54.566667\n",
+      "  - Total time detecting: 0:43:36.191178\n",
+      "  - Total track length: 0:24:28.566534\n"
      ]
     }
    ],
@@ -100,9 +109,10 @@
     "        d['track_kpts'].extend(track_kpts)\n",
     "        d['track_length'].extend(track_length)\n",
     "\n",
-    "print('Total video length:', timedelta(seconds=sum(experiments[0]['video_length'])))\n",
-    "print('Total time detecting:', timedelta(seconds=sum(experiments[0]['time_detecting'])))\n",
-    "print('Total track length:', timedelta(seconds=sum(experiments[0]['track_length'])))"
+    "    print(f\"{d['label']}:\")\n",
+    "    print('  - Total video length:', timedelta(seconds=sum(d['video_length'])))\n",
+    "    print('  - Total time detecting:', timedelta(seconds=sum(d['time_detecting'])))\n",
+    "    print('  - Total track length:', timedelta(seconds=sum(d['track_length'])))"
    ]
   },
   {
@@ -111,6 +121,53 @@
    "metadata": {},
    "source": [
     "We take a random sample of videos from the dataset. From these we take 5 second segments of detected bounding boxes. The 30 FPS samples will be our ground truth while subsamples of 15, 7, and 3FPS will be used as contrast. We will use the signal to noise ratio to check on the quality of the signals. We will use interpolation estrategies to complete the missing gaps in detection."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "5b1201e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_time = []\n",
+    "test_bbox = []\n",
+    "test_kpts = []\n",
+    "\n",
+    "d = experiments[0]\n",
+    "\n",
+    "track_time = d['track_time']\n",
+    "track_bbox = d['track_bbox']\n",
+    "track_kpts = d['track_kpts']\n",
+    "\n",
+    "track_length = d['track_length']\n",
+    "num_tracks = len(track_time)\n",
+    "\n",
+    "track_samples = (np.random.random(SAMPLE_NUM) * num_tracks).astype(int)\n",
+    "track_start = np.random.random(SAMPLE_NUM) * (np.float32(track_length)[track_samples] - SAMPLE_LENGTH)\n",
+    "\n",
+    "for ti, ts in zip(track_samples, track_start):\n",
+    "    t_time = []\n",
+    "    t_bbox = []\n",
+    "    t_kpts = []\n",
+    "    for i in range(len(track_time[ti])):\n",
+    "        if ts <= track_time[ti][i] < ts + SAMPLE_LENGTH:\n",
+    "            t_time.append(track_time[ti][i])\n",
+    "            t_bbox.append(track_bbox[ti][i])\n",
+    "            t_kpts.append(track_kpts[ti][i])\n",
+    "    test_time.append(t_time)\n",
+    "    test_bbox.append(t_bbox)\n",
+    "    test_kpts.append(t_kpts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94bd8758",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate the center of the bbox for all frames and get the average position, normalize the track centers by it."
    ]
   },
   {
@@ -123,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "3006a167",
    "metadata": {},
    "outputs": [
