Rename general dataset analysis notebook

--- a/analysis/dataset_dimentions.ipynb
+++ b/analysis/dataset_dimentions.ipynb
@@ -5,7 +5,7 @@
    "id": "b14e1b8e",
    "metadata": {},
    "source": [
-    "# Download analysis\n",
+    "# Dataset dimentions\n",
     "On this notebook we analize the downloaded videos before processing them.\n",
     "\n",
     "### Method\n",
@@ -49,7 +49,7 @@
     }
    ],
    "source": [
-    "video_src = Path('../data/video_metadata.csv')\n",
+    "video_src = Path('../data/dataset_dimentions.csv')\n",
     "column_types = [('video_id', str), ('width', int), ('height', int), ('duration', float)]\n",
     "df = pd.read_csv(video_src, index_col=0, dtype=dict(column_types))\n",
     "\n",
