--- a/analysis/dataset_dimentions.ipynb
+++ b/analysis/dataset_dimentions.ipynb
@@ -87,7 +87,7 @@
     "plt.xlabel('Video length')\n",
     "plt.xticks(bins, [str(timedelta(seconds=s))[:7] for s in bins], rotation=45)\n",
     "plt.title('Video distribution by Length')\n",
-    "plt.savefig('images/video_dist_length.svg')\n",
+    "plt.savefig('images/video_dist_length.svg', bbox_inches='tight')\n",
     "plt.savefig('images/video_dist_length.png', bbox_inches='tight')\n",
     "plt.show()"
    ]
@@ -191,7 +191,7 @@
     "# plt.yscale('log')\n",
     "plt.xlabel('Area (log)')\n",
     "plt.title('Video agreggate count by Area')\n",
-    "plt.savefig('images/video_dist_area.svg')\n",
+    "plt.savefig('images/video_dist_area.svg', bbox_inches='tight')\n",
     "plt.savefig('images/video_dist_area.png', bbox_inches='tight')\n",
     "plt.show()"
    ]
