--- a/analysis/interpolation.ipynb
+++ b/analysis/interpolation.ipynb
@@ -1,6 +1,54 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "642075ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TRACK_PATH = r'\\\\Desktop-0331tte\\d\\chiletv-testdata\\track\\none@30FPS'\n",
+    "TRACK_CSV = r'..\\data\\testdata_tracks.csv'\n",
+    "TRACK_LENGTH = 5\n",
+    "TRACK_FRAME_RATE = 30.0\n",
+    "TRACK_SAMPLES = 5000\n",
+    "\n",
+    "# DATA_SHAPE:: 5000, TRACK_LENGTH * TRACK_FRAME_RATE , 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1bb6390e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "\n",
+    "import json\n",
+    "from pathlib import Path\n",
+    "from datetime import timedelta\n",
+    "from typing import List\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.interpolate import interp1d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "342900d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for file in Path(TRACK_PATH).glob('**/*.tracks.json'):\n",
+    "    with file.open('r', encoding='utf8') as fp:\n",
+    "        obj = json.load(fp)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "16736aa1",
    "metadata": {},
