Rename general analysis notebook

--- a/analysis/general_dataset_stats.ipynb
+++ b/analysis/general_dataset_stats.ipynb
@@ -5,14 +5,9 @@
    "id": "b14e1b8e",
    "metadata": {},
    "source": [
-    "# Dataset dimentions\n",
-    "On this notebook we analize the downloaded videos before processing them.\n",
+    "# General dataset dimentions\n",
     "\n",
-    "### Method\n",
-    "Videos more than a minute and less than an hour were downloaded. All videos were re-coded to use the *h264* codec with a frame rate of 30FPS, while the audio used the *pcm_s16le* codec with a bitrate of 16k mono-channelled audio.\n",
-    "\n",
-    "### Results\n",
-    "The downloaded videos amount to 8303 files, adding up to 121 days and 9:29:38 hours. Most videos have a duration around the 15 minute mark. The audio and video channels were separated and re-coded before face detection. Accounting for the video distribution by the frame dimensions (Fig. \\[video_dist_area]) the 640x480 resolution is chosen as the upper threshold for resizing, as 75% of the videos lie above this threshold."
+    "A quick exploratory analysis of the downloaded videos."
    ]
   },
   {
@@ -130,7 +125,7 @@
     }
    ],
    "source": [
-    "video_src = Path('../data/dataset_dimentions.csv')\n",
+    "video_src = Path('../data/general_dataset_stats.csv')\n",
     "column_types = [('video_id', str), ('width', int), ('height', int), ('duration', float)]\n",
     "df = pd.read_csv(video_src, index_col=0, dtype=dict(column_types))\n",
     "\n",
