--- a/analysis/face_detection_analysis.ipynb
+++ b/analysis/face_detection_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "112453bf",
+   "id": "d679d1e7",
    "metadata": {},
    "source": [
     "# Face Detection Analysis\n",
@@ -15,8 +15,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f1cdd07f",
+   "execution_count": 1,
+   "id": "5c775a3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DETECTION_PATH = r'\\\\Desktop-0331tte\\d\\chiletv-testdata\\detection'\n",
+    "DETECTION_CSV = r'..\\data\\face_detection_testdata.csv'\n",
+    "DETECTION_COLUMNS = [\n",
+    "    'video_id', 'frame_rate', 'batch_size', 'min_face_size', 'max_frame_size', 'frame_scale', 'width', 'height',\n",
+    "    'video_length', 'detection_length']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "5a5f8109",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +39,33 @@
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import seaborn as sns\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88674cf5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_data(detection_path, detection_columns):\n",
+    "    for file in Path(detection_path).glob(r'**/*.detections.json'):\n",
+    "        with file.open('r', encoding='utf8') as fp:\n",
+    "            obj = json.load(fp)\n",
+    "            obj['video_id'] = file.name[:file.name.index('.')]\n",
+    "            if 'frame_scale' not in obj:\n",
+    "                obj['frame_scale'] = float(file.parent.name[1:file.parent.name.index('-')])\n",
+    "            yield {key: obj[key] for key in detection_columns}\n",
+    "\n",
+    "csv_file = Path(DETECTION_CSV)\n",
+    "if not csv_file.exists():\n",
+    "    df = pd.DataFrame(read_data(DETECTION_PATH, DETECTION_COLUMNS))\n",
+    "    df.to_csv(csv_file, index=False)\n",
+    "else:\n",
+    "    df = pd.read_csv(csv_file)\n",
+    "df.head()"
    ]
   }
  ],
