Add face area graphs

--- a/analysis/general_dataset_stats.ipynb
+++ b/analysis/general_dataset_stats.ipynb
@@ -13,39 +13,25 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c5c49e76",
+   "id": "0a82a452",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "from datetime import timedelta\n",
     "from itertools import islice\n",
-    "\n",
     "import numpy as np\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "0a82a452",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
     "plt.style.use('classic')\n",
-    "\n",
     "%matplotlib inline\n",
-    "\n",
     "import seaborn as sns\n",
-    "\n",
     "sns.set()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "2bc9e53f",
    "metadata": {},
    "outputs": [],
@@ -57,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "5dd1d189",
    "metadata": {
     "scrolled": true
@@ -69,7 +55,7 @@
        "Timedelta('121 days 09:29:38.667000')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "24207566",
    "metadata": {},
    "outputs": [
@@ -113,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "574837e2",
    "metadata": {},
    "outputs": [
@@ -193,7 +179,7 @@
        "4    480     360    297   282353.799"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "58caf1d5",
    "metadata": {},
    "outputs": [],
@@ -228,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "b0b2b4c5",
    "metadata": {},
    "outputs": [
@@ -268,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "ff45bcd0",
    "metadata": {},
    "outputs": [
